--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,15 @@
-{% include header.html %}
+<!DOCTYPE html>
+<html lang="{{ page.lang | default: "en" }}">
+  {%- include head.html -%}
+  <body a="{{ site.theme_config.appearance | default: "auto" }}">
+    <main class="page-content" aria-label="Content">
+      <div class="w">
+        {{ content }}
+      </div>
+    </main>
 
-<div class="container">
-  {{ content }}
-</div>
-
-{% include footer.html %}
+    {% if site.goat_counter and jekyll.environment == "production" %}
+      {% include goat_counter.html %}
+    {% endif %}
+  </body>
+</html>
