--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,4 +1,6 @@
 ---
+sitemap: false
 ---
 
-@import "no-style-please";
+@import "moving";
+@import url('https://fonts.googleapis.com/css?family=Bitter&display=swap');
