--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -33,7 +33,7 @@ layout: default
   {%- if site.comment.enabled -%}
   {% include comments.html -%}
   {%- else -%}
-  {% include contact.html -%}
+  include contact.html 
   {%- endif -%}
 </main>
 {%- if site.theme_setting.code or page.code -%}
