--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -31,9 +31,9 @@ layout: default
     </div>
   </article>
   {%- if site.comment.enabled -%}
-  {% include comments.html -%}
+   include comments.html 
   {%- else -%}
-  include contact.html 
+  {% include contact.html -%} 
   {%- endif -%}
 </main>
 {%- if site.theme_setting.code or page.code -%}
