--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -2,5 +2,5 @@
 {%- when 'static' -%}
 {% include comment/static/comments.html %}
 {%- when 'disqus' -%}
-{% include comment/disqus.html %}
+ include comment/disqus.html 
 {%- endcase -%}
