--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,6 +1,4 @@
 ---
-sitemap: false
 ---
 
-@import "moving";
-@import url('https://fonts.googleapis.com/css?family=Bitter&display=swap');
+@import "no-style-please";
